--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.0.1",
     "redux": "^3.6.0",
+    "sha512": "^0.0.1",
     "socket.io": "^1.5.1"
   },
   "standard": {
