--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-router": "^2.0.1",
     "redux": "^3.6.0",
     "sha512": "^0.0.1",
-    "socket.io": "^1.5.1"
+    "socket.io": "^1.5.1",
+    "uuid": "^3.0.0"
   },
   "standard": {
     "ignore": [
